# OnlyFrameWindow

./: CMakeLists.txt  LICENSE  README.md  frame_app.pro  main.cpp  resizerframe.cpp  resizerframe.h  transparentwindow.cpp  transparentwindow.h
.github/workflows/: cmake-multi-platform.yml
